--- a/src/styles/blocks/_icons.scss
+++ b/src/styles/blocks/_icons.scss
@@ -1,116 +1,24 @@
 .icons {}
 
-.fa-solid {
-
+.contact__icon:not(:last-child) {
+  padding-right: 0.5rem;
 }
 
-.fa-envelope {
-  color: $color-accent;
-  padding-right: 10px;
+.network__icon:not(:last-child) {
+  padding-right: 0.5rem;
+  font-size: calc(20 / 16) * 1rem;
 }
 
-.fa-clock {
-  color: $color-accent;
-  padding-right: 10px;
+.call__icon {
+  padding-left: calc(5 / 16) * 1rem;
+
+  &:hover,
+  &:focus {
+    font-size: calc(17 / 16) * 1rem;
+  }
 }
 
-.fa-chevron-down {
-  margin-left: 0.7em;
-  font-size: 8px;
+.check__icon {
+  font-size: calc(20 / 16) * 1rem;
+  padding-right: calc(5 / 16) * 1rem;
 }
-
-.fa-brands {
-  display: inline-block;
-  font-size: 0.875em;
-  color: #15101e;
-}
-
-.fa-brands:not(:last-child) {
-  margin-right: 2em;
-}
-
-
-.fa-twitter {}
-
-.fa-facebook {}
-
-.fa-pinterest-p {}
-
-.fa-instagram {}
-
-// .icons {
-//   display: inline-block;
-//   max-width: 16px;
-//   max-height: 16px;
-//   min-width: 16px;
-//   min-height: 16px;
-// }
-// .info {
-//   justify-content: space-between;
-// }
-
-// .info__mail {}
-
-// .icon__mail {}
-
-// .icon {}
-
-// .mail__text {
-//   @include header__text;
-//   padding-left: 20px;
-// }
-
-// .info__time {
-//   margin-left: 30px;
-// }
-
-// .time__text {
-//   @include header__text;
-//   padding-left: 20px;
-// }
-
-// .info__logo {}
-
-// .down-arrow__icon {}
-
-// .network__list {
-
-// }
-
-// .network__item {}
-
-// .network__link {}
-
-// .icon__network {}
-
-// .icons {}
-// // .icon__search img {
-// //     max-width: 28px;
-// //     min-width: 28px;
-// //     max-height: 28px;
-// //     min-height: 28px;
-// // }
-
-// // .icon__phone {
-// //   padding: 15px;
-// //   background: $color-accent;
-// //   border-radius: 50%;
-// //   &img {
-
-// //   }
-// // }
-
-// // .icon__phone img {
-// //   text-align: center;
-// //   max-width: 20px;
-// //   min-width: 20px;
-// //   max-height: 20px;
-// //   min-height: 20px;
-// // }
-
-// // .icon__network{
-// //   max-width: 16px;
-// //   max-height: 16px;
-// //   min-width: 16px;
-// //   min-height: 16px;
-// // }
