--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -1,30 +1,73 @@
-.bottom__menu {}
-
-.menu {}
+.menu {
+  flex-basis: 55%;
+}
 
 .menu__list {
-
+  display: flex;
+  justify-content: space-between;
 }
 
-.menu__item {
-  font-size: 16px;
-  font-weight: 600;
-  color: #6C6A72;
+//animation
+.menu__item a {
+  position: relative;
 
-    &:hover{
-      color: $color-accent;
+  &:hover {
+    font-weight: 500;
+  }
+
+  &::before {
+      content: '';
+      bottom: 0;
+      left: 0;
+      position: absolute;
+      width: 0%;
+      height: 2px;
+      background-color: $color-accent-orange;
+      transition: 0.3s;
+  }
+
+  &:hover:before {
+      width: 100%;
     }
-    &:active{
-      color: $color-accent;
-    }
-}
-
-.menu__item:not(:last-child) {
-  padding-right: 50px;
-
 }
 
 
-.menu__link {
+// .menu__link {
+//   &:hover {
+//     border-bottom: 2px solid $color-accent-orange;
+//     font-weight: 500;
+//   }
+// }
+// .menu {
+//   flex-basis: 50%;
+// }
 
-}
+// .menu__list {
+//   display: flex;
+//   justify-content: space-between;
+
+// }
+
+// .menu__item {
+//   font-size: 16px;
+//   font-weight: 600;
+//   color: $color-light;
+
+//     &:hover{
+
+//     }
+//     &:active{
+//       color: $color-accent;
+//     }
+// }
+
+// .menu__item:not(:last-child) {
+//   // padding-right: 50px;
+
+// }
+
+// .menu__link {
+
+// }
+
+
