--- a/src/styles/common/_common.scss
+++ b/src/styles/common/_common.scss
@@ -5,25 +5,44 @@
   margin: 0;
   list-style: none;
   text-decoration: none;
+  color: inherit;
 }
+
 
 html,
 body {
-  border: none;
-  font-family: 'Catamaran', 'Arial', sans-serif;
+  font-family: 'Montserrat', 'Arial', sans-serif;
+  font-style: normal;
   font-weight: 400;
-  // letter-spacing: 0.06em;
-  // line-height: 1em;
-  // min-height: 100%;
-  overflow: hidden;
+  color: $color-dark;
+  letter-spacing: normal;
+  line-height: 1rem;
 }
 
+h1,
+h2,
+h3,
+h4 {
+  padding: 0;
+  margin: 0;
+  font-family: 'Montserrat', 'Arial', sans-serif;
+  font-size: initial;
+  font-style: normal;
+  font-weight: 700;
+  letter-spacing: normal;
+  line-height: 1em;
+}
+
+a {
+  line-height: 0;
+}
 
 .container {
   box-sizing: content-box;
   margin: 0 auto;
-  padding: 0 5px;
+  padding: 0 0.3125rem;
   max-width: 1320px;
+  max-height: 100%;
   outline: 1px solid red;
 
 
@@ -37,10 +56,4 @@ body {
   //   padding: 0 10px;
   // }
 }
-
-.flex__block {
-  display: flex;
-  justify-content: space-between;
-}
-
 
