--- a/src/styles/common/_fonts.scss
+++ b/src/styles/common/_fonts.scss
@@ -1,45 +1,59 @@
-/* catamaran-regular - latin */
+/* montserrat-300 - latin_cyrillic */
 @font-face {
-  font-family: 'Catamaran';
+  font-family: 'Montserrat';
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   src: local(''),
-    url('../fonts/catamaran-v15-latin-regular.woff2') format('woff2'),
+    url('../fonts/montserrat-v24-latin_cyrillic-300.woff2') format('woff2'),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('../fonts/catamaran-v15-latin-regular.woff') format('woff');
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* catamaran-500 - latin */
-@font-face {
-  font-family: 'Catamaran';
-  font-style: normal;
-  font-weight: 500;
-  src: local(''),
-    url('../fonts/catamaran-v15-latin-500.woff2') format('woff2'),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('../fonts/catamaran-v15-latin-500.woff') format('woff');
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* catamaran-600 - latin */
-@font-face {
-  font-family: 'Catamaran';
-  font-style: normal;
-  font-weight: 600;
-  src: local(''),
-    url('../fonts/catamaran-v15-latin-600.woff2') format('woff2'),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('../fonts/catamaran-v15-latin-600.woff') format('woff');
+    url('../fonts/montserrat-v24-latin_cyrillic-300.woff') format('woff');
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
-/* catamaran-800 - latin */
+/* montserrat-regular - latin_cyrillic */
 @font-face {
-  font-family: 'Catamaran';
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: local(''),
+    url('../fonts/montserrat-v24-latin_cyrillic-regular.woff2') format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url('../fonts/montserrat-v24-latin_cyrillic-regular.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* montserrat-500 - latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  src: local(''),
+    url('../fonts/montserrat-v24-latin_cyrillic-500.woff2') format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url('../fonts/montserrat-v24-latin_cyrillic-500.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* montserrat-600 - latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  src: local(''),
+    url('../fonts/montserrat-v24-latin_cyrillic-600.woff2') format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url('../fonts/montserrat-v24-latin_cyrillic-600.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* montserrat-800 - latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: 800;
   src: local(''),
-    url('../fonts/catamaran-v15-latin-800.woff2') format('woff2'),
+    url('../fonts/montserrat-v24-latin_cyrillic-800.woff2') format('woff2'),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('../fonts/catamaran-v15-latin-800.woff') format('woff');
+    url('../fonts/montserrat-v24-latin_cyrillic-800.woff') format('woff');
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
