--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,12 +1,20 @@
 // Fonts
-$font: 'Catamaran', sans-serif;
+$font: 'Montserrat', 'Arial', sans-serif;
 
 // colors
-$color-dark: #1d1729;
-$color-light: #FFFFFF;
-$color-primary: #5f2dee;
-$color-accent: #b882fc;
-$color-font: #6c6a72;
+$color-dark: #07003B;
+$color-light: #fff;
+$color-light-gray: #98A0B7;
+$color-accent-orange: #EDC048;
+
+// $color-dark: #1d1729;
+// $color-light: #FFFFFF;
+// $color-primary: #2b1166;
+// $color-accent: #703FAF;
+// $color-font: #6c6a72;
+// $color-yellow-light: #F5E8B8;
+// $color-yellow: #f8d34e;
+// $color-dark-yellow: #f8cb00;
 
 // indents
 
