--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,6 +11,7 @@
 @import "blocks/_promo";
 @import "blocks/_lead";
 @import "blocks/_benefits";
+@import "blocks/_instruction";
 @import "blocks/_buttons";
 @import "blocks/_icons";
 @import "blocks/_background";
